Evenif we don't care of WxWidget, fix #2365.